--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Inactivity Monitor</string>
-    <string name="title_home">Home</string>
+    <string name="app_name">Activity Monitor</string>
+    <string name="title_activity_log">Log</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
 </resources>
