--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_activity_log">Log</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="channel_name">Time to move</string>
+    <string name="channel_description">Tells you when to move</string>
+  <string name="action_vibrate">Test vibration</string>
+    <string name="action_settings">Settings</string>
 </resources>
