--- a/TODO.mkd
+++ b/TODO.mkd
@@ -1,12 +1,15 @@
-TODO Show notifications
-TODO Snooze vibrations (if possible with a physical button)
 TODO dependency injection
-TODO make MainActivity reactive.
 TODO unit tests & refactor code into testable components
-TODO refactor TransitionRepository to ActivityRepository (aggregated transitions)
-TODO show aggregated transitions (aka Activities) in the log instead of every transition
+TODO Handle case where the phone is turned off for a while (schedule alarm on boot)
+TODO Add ability to snooze Move It reminders
+TODO make MainActivity reactive.
 TODO optimize AlarmManager usage, by scheduling alarms only when necessary
-TODO sync to backend
+TODO sync to cloud backend
 TODO vibrate on the watch
 TODO detect activity transitions on the watch
+===========
+DONE refactor TransitionRepository to ActivityRepository (aggregated transitions)
+DONE create Enum for ActivityType, and use a column adapter to map it to the database
+DONE Show notifications
+DONE show aggregated transitions (aka Activities) in the log instead of every transition
 
