--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,12 @@
   <string name="title_activity_log">Log</string>
   <string name="title_dashboard">Dashboard</string>
   <string name="title_notifications">Notifications</string>
+
+  <string name="action_sync_to_cloud">Sync to cloud</string>
   <string name="action_vibrate">Test vibration</string>
   <string name="action_notify">Test notification</string>
   <string name="action_settings">Settings</string>
+
   <string name="main_activity_not_yet_implemented">Not yet implemented</string>
   <string name="main_activity_no_activies_detectd">No activities have been detected, try moving around with your phone in your pocket</string>
   <string name="main_activity_current_status">\nCurrent status\n\n    %1$s for %2$.2f minutes."</string>
