--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
   <string name="notification_time_to_move_text">%1$s for %2$.2f minutes</string>
   <string name="notification_current_activity_title">Current activity</string>
   <string name="notification_current_activity_text">%1$s</string>
+  <string name="action_record_walking">I walked</string>
 </resources>
