Move Activity Event Log to the 2nd bottom nav entry
The 3rd bottom nav entry will be used for developer logging and diagnosis.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
   <string name="app_name">Activity Monitor</string>
-  <string name="title_activity_log">Log</string>
-  <string name="title_dashboard">Dashboard</string>
-  <string name="title_notifications">Notifications</string>
+  <string name="title_activity">Activity</string>
+  <string name="title_events">Events</string>
+  <string name="title_log">Log</string>
 
   <string name="action_sync_to_cloud">Sync to cloud</string>
   <string name="action_vibrate">Test vibration</string>
