--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,14 @@
   <string name="action_sync_to_cloud">Sync to cloud</string>
   <string name="action_vibrate">Test vibration</string>
   <string name="action_notify">Test notification</string>
-  <string name="action_settings">Settings</string>
+  <string name="action_about">About</string>
 
   <string name="main_activity_not_yet_implemented">Not yet implemented</string>
   <string name="main_activity_no_activies_detectd">No activities have been detected, try moving around with your phone in your pocket</string>
   <string name="main_activity_current_status">\nCurrent status\n\n    %1$s for %2$.2f minutes."</string>
   <string name="main_activity_do_not_disturb_on">\n\n<b>Do Not Disturb is ON.</b>\n\nYou will NOT receive reminders to move.</string>
   <string name="main_activity_do_not_disturb_off">\n\nDo Not Disturb mode is <b>OFF</b>.</string>
+  <string name="main_activity_version">Version</string>
 
   <!-- Notifications -->
   <string name="notification_move_channel_name">Reminders to move</string>
