--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
   <string name="action_sync_to_cloud">Sync to cloud</string>
   <string name="action_vibrate">Test vibration</string>
   <string name="action_notify">Test notification</string>
+  <string name="action_settings">Settings</string>
   <string name="action_about">About</string>
 
   <string name="main_activity_do_not_disturb_on">\n\n<b>Do Not Disturb is ON.</b>\n\nYou will NOT receive reminders to move.</string>
@@ -35,4 +36,9 @@
   <string name="event_type_running">RUNNING</string>
   <string name="event_type_unknown">UNKNOWN</string>
   <string name="event_type_end">END</string>
+
+  <!--  Settings-->
+  <string name="settings_reminders">Reminders</string>
+  <string name="settings_vibrate">Vibrate</string>
+  <string name="settings_notify">Notify</string>
 </resources>
