--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
   <string name="app_name">Activity Monitor</string>
 
-  Main screen navigation
+  <!--  Main screen -->
   <string name="navigation_title_home">Home</string>
   <string name="navigation_title_todays_activities">Today</string>
   <string name="navigation_title_log">Log</string>
@@ -16,6 +16,10 @@
   <string name="main_activity_do_not_disturb_off">\n\nDo Not Disturb mode is <b>OFF</b>.</string>
   <string name="main_activity_version">Version</string>
   <string name="main_activity_event_log">"%1$s %2$s for %3$s minutes\n"</string>
+  <string name="main_activity_start_snooze">Start Snooze</string>
+  <string name="main_activity_cancel_snooze">Cancel snooze</string>
+  <string name="main_activity_snooze_reminders_for">Snooze Reminders For</string>
+  <string name="main_activity_snooze_status">Reminders snoozed until %1$s</string>
 
   <!-- Notifications -->
   <string name="notification_move_channel_name">Reminders to move</string>
@@ -41,4 +45,11 @@
   <string name="settings_reminders">Reminders</string>
   <string name="settings_vibrate">Vibrate</string>
   <string name="settings_notify">Notify</string>
+
+  <!--  Snooze-->
+  <string name="snooze_15_minutes">15 mins</string>
+  <string name="snooze_30_minutes">30 mins</string>
+  <string name="snooze_45_minutes">45 mins</string>
+  <string name="snooze_1_hour">1 hour</string>
+  <string name="snooze_2_hours">2 hours</string>
 </resources>
