--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,7 @@
   <string name="snooze_1_hour">1 hour</string>
   <string name="snooze_2_hours">2 hours</string>
   <string name="action_test_reminder">Test reminder</string>
+
+  <!-- Run-time permissions -->
+  <string name="permission_rationale_activity">This permission is required to remind you to move throughout the day</string>
 </resources>
